<resources>

    <string name="app_name">Smart Home</string>
    <string name="textview">Office Bulb</string>
    <string name="textviewcolor">Color Value</string>
    <string name="textviewplug">Kitchen Plug 1</string>
    <string name="textviewalarm">Set Alarm</string>
    <string name="textviewshedule">Create Shedule</string>
    <string name="img_1">I1</string>
    <string name="img_2">I2</string>
    <string name="btn_name4">b3</string>
    <string name="mainbtn1">Bulb Contoller</string>
    <string name="mainbtn2">Plug Contoller</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="Register_text">"Agrement"</string>
    <string name="Register_agree">"Agree"</string>
    <string name="Register_cancel">"Cancel"</string>
    <string name="create_account">"Create Account "</string>
    <string name="create_id">"Id"</string>
    <string name="create_name">"First Name"</string>
    <string name="create_familyname">"Last Name"</string>
    <string name="create_email">"Email"</string>
    <string name="create_password">"Enter Passoword"</string>
    <string name="create_repassword">"Re-Enter Passoword"</string>
    <string name="register_screen">"Welcome Again"</string>
    <string name="menu">""</string>
    <string name="regbottom"><u>I am already a member</u></string>
    <string name="logbottom"><u>Sign Up Instead</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
