<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newActionBar"
    tools:context=".user.HandleUser"
    android:layout_gravity="center_vertical|center_horizontal">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/newActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Register_text"
                android:textAlignment="center"
                android:textColor="@color/newLetters"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement This is Oure Agrement "
                android:textAlignment="center"
                android:textColor="@color/newLetters"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/accountContinue"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/btnpattern"
                    android:text="@string/Register_agree"
                    android:textColor="@color/newLetters" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnpattern"
                    android:text="@string/Register_cancel"
                    android:textColor="@color/newLetters" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>